feat: config docker